Git doesn't support $Date$. Put in the real copyright date. Start removing other $...$ svn stuff.

--- a/src/main/java/org/ppwcode/vernacular/semantics/VII/exception/PropertyException_nl.properties
+++ b/src/main/java/org/ppwcode/vernacular/semantics/VII/exception/PropertyException_nl.properties
@@ -1,5 +1,5 @@
 # <license>
-# Copyright 2009 - $Date$ by PeopleWare n.v.
+# Copyright 2009 - 2016 by PeopleWare n.v.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -16,6 +16,6 @@
 
 # $HeadURL$
 # $Revision$
-# $Date$
+# 2016
 
 DEFAULT = De waarde ({origin.${propertyName}}) van {originType.${propertyName}:propertyName} van {originType:type} wordt niet aanvaard.
