No longer using meta-info. Putting contracts in comment (for now).

--- a/src/main/java/org/ppwcode/vernacular/semantics/VII/bean/SemanticBean_fr.properties
+++ b/src/main/java/org/ppwcode/vernacular/semantics/VII/bean/SemanticBean_fr.properties
@@ -14,9 +14,5 @@
 # limitations under the License.
 # </license>
 
-# $HeadURL$
-# $Revision$
-# $Date$
-
-type.singular = Bean Sémantique
-type.plural = Beans Sémantiques
+type.singular = Bean SÃ©mantique
+type.plural = Beans SÃ©mantiques
