--- a/src/main/java/org/ppwcode/vernacular/semantics/VII/bean/RousseauBean_fr.properties
+++ b/src/main/java/org/ppwcode/vernacular/semantics/VII/bean/RousseauBean_fr.properties
@@ -14,12 +14,8 @@
 # limitations under the License.
 # </license>
 
-# $HeadURL$
-# $Revision$
-# 2016
-
 type.singular = Rousseau Bean
 type.plural = Rousseau Beans
 
 property.wildException = exceptions sauvage
-property.civilized = civilisé
+property.civilized = civilisÃ©
